fix: fix show more button not showing remaining images

--- a/themes/origins/styles/product-reviews.scss
+++ b/themes/origins/styles/product-reviews.scss
@@ -197,13 +197,13 @@ yc-reviews {
           padding-block-start: var(--gap-lg);
           border-block-start: 1px solid rgba(var(--section-text-color), 8%);
 
+          yc-dialog-trigger:nth-child(n + 4) {
+            display: none;
+          }
+
           button[data-image] {
             padding: 2px;
             border-radius: calc(var(--button-border-radius) * 0.66);
-
-            &:nth-child(n + 4) {
-              display: none;
-            }
 
             img {
               width: 50px;
@@ -218,7 +218,7 @@ yc-reviews {
             }
           }
 
-          &:not(:has(button:nth-child(n + 4))) label {
+          &:not(:has(yc-dialog-trigger:nth-child(n + 4))) label {
             display: none;
           }
 
@@ -235,7 +235,7 @@ yc-reviews {
               display: none;
             }
 
-            button[data-image]:nth-child(n + 4) {
+            yc-dialog-trigger:nth-child(n + 4) {
               display: flex;
             }
           }
